--- a/portfolio.html
+++ b/portfolio.html
@@ -39,12 +39,22 @@
         <h2>Список работ</h2>
         <ul>
           <li>
-            <img src="/images/Portfolio/project-1.jpg" alt="ноутбук" />
+            <img
+              src="/images/Portfolio/project-1.jpg"
+              alt="ноутбук"
+              width="370"
+              height="294"
+            />
             <h3>Технокряк</h3>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="/images/Portfolio/project-2.jpg" alt="баскетболисты" />
+            <img
+              src="/images/Portfolio/project-2.jpg"
+              alt="баскетболисты"
+              width="370"
+              height="294"
+            />
             <h3>Постер <span lang="en">New Orlean vs Golden State</span></h3>
             <p>Дизайн</p>
           </li>
@@ -52,32 +62,59 @@
             <img
               src="/images/Portfolio/project-3.jpg"
               alt="логотип ресторана"
+              width="370"
+              height="294"
             />
             <h3>Ресторан <span lang="en">Seafood</span></h3>
             <p>Приложение</p>
           </li>
           <li>
-            <img src="/images/Portfolio/project-4.jpg" alt="наушники" />
+            <img
+              src="/images/Portfolio/project-4.jpg"
+              alt="наушники"
+              width="370"
+              height="294"
+            />
             <h3>Проект <span lang="en">Prime</span></h3>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="/images/Portfolio/project-5.jpg" alt="коробки" />
+            <img
+              src="/images/Portfolio/project-5.jpg"
+              alt="коробки"
+              width="370"
+              height="294"
+            />
             <h3>Проект <span lang="en">Boxes</span></h3>
             <p>Приложение</p>
           </li>
           <li>
-            <img src="/images/Portfolio/project-6.jpg" alt="десктоп" />
+            <img
+              src="/images/Portfolio/project-6.jpg"
+              alt="десктоп"
+              width="370"
+              height="294"
+            />
             <h3 lang="en">Inspiration has no Borders</h3>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="/images/Portfolio/project-7.jpg" alt="раскрытый журнал" />
+            <img
+              src="/images/Portfolio/project-7.jpg"
+              alt="раскрытый журнал"
+              width="370"
+              height="294"
+            />
             <h3>Издание <span lang="en">Limited Edition</span></h3>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="/images/Portfolio/project-8.jpg" alt="лейба" />
+            <img
+              src="/images/Portfolio/project-8.jpg"
+              alt="лейба"
+              width="370"
+              height="294"
+            />
             <h3>Проект <span lang="en">LAB</span></h3>
             <p>Маркетинг</p>
           </li>
@@ -85,6 +122,8 @@
             <img
               src="/images/Portfolio/project-9.jpg"
               alt="руки на клавиатуре ноутбука"
+              width="370"
+              height="294"
             />
             <h3 lang="en">Growing Business</h3>
           </li>
