--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
         <ul>
           <li>
             <img
-              src="/images/Portfolio/project-1.jpg"
+              src="./images/Portfolio/project-1.jpg"
               alt="ноутбук"
               width="370"
               height="294"
@@ -50,7 +50,7 @@
           </li>
           <li>
             <img
-              src="/images/Portfolio/project-2.jpg"
+              src="./images/Portfolio/project-2.jpg"
               alt="баскетболисты"
               width="370"
               height="294"
@@ -60,7 +60,7 @@
           </li>
           <li>
             <img
-              src="/images/Portfolio/project-3.jpg"
+              src="./images/Portfolio/project-3.jpg"
               alt="логотип ресторана"
               width="370"
               height="294"
@@ -70,7 +70,7 @@
           </li>
           <li>
             <img
-              src="/images/Portfolio/project-4.jpg"
+              src="./images/Portfolio/project-4.jpg"
               alt="наушники"
               width="370"
               height="294"
@@ -80,7 +80,7 @@
           </li>
           <li>
             <img
-              src="/images/Portfolio/project-5.jpg"
+              src="./images/Portfolio/project-5.jpg"
               alt="коробки"
               width="370"
               height="294"
@@ -90,7 +90,7 @@
           </li>
           <li>
             <img
-              src="/images/Portfolio/project-6.jpg"
+              src="./images/Portfolio/project-6.jpg"
               alt="десктоп"
               width="370"
               height="294"
@@ -100,7 +100,7 @@
           </li>
           <li>
             <img
-              src="/images/Portfolio/project-7.jpg"
+              src="./images/Portfolio/project-7.jpg"
               alt="раскрытый журнал"
               width="370"
               height="294"
@@ -110,7 +110,7 @@
           </li>
           <li>
             <img
-              src="/images/Portfolio/project-8.jpg"
+              src="./images/Portfolio/project-8.jpg"
               alt="лейба"
               width="370"
               height="294"
@@ -120,7 +120,7 @@
           </li>
           <li>
             <img
-              src="/images/Portfolio/project-9.jpg"
+              src="./images/Portfolio/project-9.jpg"
               alt="руки на клавиатуре ноутбука"
               width="370"
               height="294"
