--- a/index.html
+++ b/index.html
@@ -5,60 +5,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body>
+  <body class="page">
     <!-- Header section -->
     <header>
       <nav>
-        <a href="/">WebStudio</a>
-        <ul>
-          <li><a href="/">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a href="./index.html" class="logo"
+          ><span class="logo-web">Web</span>Studio</a
+        >
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link current">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contacts-list list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="contacts-item"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="contacts-item"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <!-- Main section -->
     <main>
       <!-- Hero text with banner -->
 
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="hero-button">Заказать услугу</button>
       </section>
 
       <!-- Advantages section -->
-      <section>
-        <h2 lang="en">Advantages</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title hidden" lang="en">Advantages</h2>
+        <ul class="list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="section-item">Внимание к деталям</h3>
+            <p class="section-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="section-item">Пунктуальность</h3>
+            <p class="section-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="section-item">Планирование</h3>
+            <p class="section-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="section-item">Современные технологии</h3>
+            <p class="section-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -67,8 +84,8 @@
       </section>
       <!-- What we do section -->
       <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <a href="">
               <img
@@ -90,50 +107,55 @@
         </ul>
       </section>
       <!-- Our team section -->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
+      <section class="team-section">
+        <h2 class="team-section-title">Наша команда</h2>
+        <ul class="list">
           <li>
             <img src="./images/img.jpg" alt="Игорь_Демьяненко" width="270" />
-            <h3>Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-section-title">Игорь Демьяненко</h3>
+            <p class="team-section-text" lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/img(1).jpg" alt="Ольга_Репина" width="270" />
-            <h3>Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-section-title">Ольга Репина</h3>
+            <p class="team-section-text" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img2).jpg" alt="Николай_Тарасов" width="270" />
-            <h3>Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-section-title">Николай Тарасов</h3>
+            <p class="team-section-text" lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/img(3).jpg" alt="Михаил_Ермаков" width="270" />
-            <h3>Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-section-title">Михаил Ермаков</h3>
+            <p class="team-section-text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer -->
-    <footer>
+    <footer class="footer">
       <!-- Contacts section -->
 
-      <a href="/"> <span>Web</span>Studio</a>
+      <a href="./index.html" class="logo-footer">
+        <span class="logo-web">Web</span>Studio</a
+      >
 
       <address>
-        <ul>
+        <ul class="list address">
           <li>
             <a
               href="https://goo.gl/maps/eKCuSF2oDqPbvLrs7"
               target="_blank"
               rel="noopener noreferrer"
+              class="address"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+38099111111">+38 099 111 11 11</a></li>
+          <li>
+            <a href="mailto:info@example.com" class="mail">info@example.com</a>
+          </li>
+          <li><a href="tel:+38099111111" class="tel">+38 099 111 11 11</a></li>
         </ul>
       </address>
     </footer>
