--- a/index.html
+++ b/index.html
@@ -18,22 +18,26 @@
     <header>
       <nav>
         <a href="./index.html" class="logo"
-          ><span class="logo-web">Web</span>Studio</a
+          ><span class="web">Web</span>Studio</a
         >
         <ul class="site-nav list">
-          <li><a href="./index.html" class="link current">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+          <li>
+            <a href="./index.html" class="link current href-deco">Студия</a>
+          </li>
+          <li>
+            <a href="./portfolio.html" class="link href-deco">Портфолио</a>
+          </li>
+          <li><a href="" class="link href-deco">Контакты</a></li>
         </ul>
       </nav>
       <ul class="contacts-list list">
         <li>
-          <a href="mailto:info@devstudio.com" class="contacts-item"
+          <a href="mailto:info@devstudio.com" class="href-deco contacts-item"
             >info@devstudio.com</a
           >
         </li>
         <li>
-          <a href="tel:+380961111111" class="contacts-item"
+          <a href="tel:+380961111111" class="contacts-item href-deco"
             >+38 096 111 11 11</a
           >
         </li>
@@ -45,7 +49,7 @@
 
       <section class="hero">
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="hero-button">Заказать услугу</button>
+        <button class="hero-button" type="button">Заказать услугу</button>
       </section>
 
       <!-- Advantages section -->
@@ -108,27 +112,27 @@
       </section>
       <!-- Our team section -->
       <section class="team-section">
-        <h2 class="team-section-title">Наша команда</h2>
+        <h2 class="team-title">Наша команда</h2>
         <ul class="list">
           <li>
             <img src="./images/img.jpg" alt="Игорь_Демьяненко" width="270" />
-            <h3 class="team-section-title">Игорь Демьяненко</h3>
-            <p class="team-section-text" lang="en">Product Designer</p>
+            <h3 class="team-member">Игорь Демьяненко</h3>
+            <p class="team-text" lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/img(1).jpg" alt="Ольга_Репина" width="270" />
-            <h3 class="team-section-title">Ольга Репина</h3>
-            <p class="team-section-text" lang="en">Frontend Developer</p>
+            <h3 class="team-member">Ольга Репина</h3>
+            <p class="team-text" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/img2).jpg" alt="Николай_Тарасов" width="270" />
-            <h3 class="team-section-title">Николай Тарасов</h3>
-            <p class="team-section-text" lang="en">Marketing</p>
+            <h3 class="team-member">Николай Тарасов</h3>
+            <p class="team-text" lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/img(3).jpg" alt="Михаил_Ермаков" width="270" />
-            <h3 class="team-section-title">Михаил Ермаков</h3>
-            <p class="team-section-text" lang="en">UI Designer</p>
+            <h3 class="team-member">Михаил Ермаков</h3>
+            <p class="team-text" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -138,7 +142,7 @@
       <!-- Contacts section -->
 
       <a href="./index.html" class="logo-footer">
-        <span class="logo-web">Web</span>Studio</a
+        <span class="web">Web</span>Studio</a
       >
 
       <address>
@@ -153,9 +157,15 @@
             >
           </li>
           <li>
-            <a href="mailto:info@example.com" class="mail">info@example.com</a>
+            <a href="mailto:info@example.com" class="mail href-deco"
+              >info@example.com</a
+            >
           </li>
-          <li><a href="tel:+38099111111" class="tel">+38 099 111 11 11</a></li>
+          <li>
+            <a href="tel:+38099111111" class="tel href-deco"
+              >+38 099 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
