after-mentor changes

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="page">
+  <body>
     <!-- Header section -->
     <header>
       <nav>
         <a href="./index.html" class="logo"
-          ><span class="web">Web</span>Studio</a
-        >
+          ><span class="web">Web</span>Studio
+        </a>
         <ul class="site-nav list">
           <li>
             <a href="./index.html" class="link current href-deco">Студия</a>
@@ -33,13 +33,13 @@
       <ul class="contacts-list list">
         <li>
           <a href="mailto:info@devstudio.com" class="href-deco contacts-item"
-            >info@devstudio.com</a
-          >
+            >info@devstudio.com
+          </a>
         </li>
         <li>
           <a href="tel:+380961111111" class="contacts-item href-deco"
-            >+38 096 111 11 11</a
-          >
+            >+38 096 111 11 11
+          </a>
         </li>
       </ul>
     </header>
@@ -100,13 +100,13 @@
           </li>
           <li>
             <a href="">
-              <img src="./images/box2.jpg" alt="телефон-в-руке" width="370"
-            /></a>
+              <img src="./images/box2.jpg" alt="телефон-в-руке" width="370" />
+            </a>
           </li>
           <li>
             <a href=""
-              ><img src="./images/box3.jpg" alt="планшет-в-руке" width="370"
-            /></a>
+              ><img src="./images/box3.jpg" alt="планшет-в-руке" width="370" />
+            </a>
           </li>
         </ul>
       </section>
@@ -153,18 +153,18 @@
               target="_blank"
               rel="noopener noreferrer"
               class="address"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
+              >г. Киев, пр-т Леси Украинки, 26
+            </a>
           </li>
           <li>
             <a href="mailto:info@example.com" class="mail href-deco"
-              >info@example.com</a
-            >
+              >info@example.com
+            </a>
           </li>
           <li>
             <a href="tel:+38099111111" class="tel href-deco"
-              >+38 099 111 11 11</a
-            >
+              >+38 099 111 11 11
+            </a>
           </li>
         </ul>
       </address>
